# stellar-orange-belt-stellarwork

./: .gitignore  README.md
.github/workflows/: ci.yml  pages.yml
contracts/: Cargo.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
deployments/: testnet.json
docs/: README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/components/: ActivityFeed.jsx  CreateJobForm.jsx  Header.jsx  JobCard.jsx  JobCard.test.jsx  ReputationLookup.jsx  Toasts.jsx
frontend/src/hooks/: useToasts.js  useWallet.js
frontend/src/lib/: format.js  format.test.js  soroban.js  wallet.js
scripts/: deploy.sh
