[workspace]
resolver = "2"
members = ["reputation", "escrow"]

# Shared release profile for every contract in the workspace. Optimised for the
# smallest possible wasm while keeping overflow checks on for safety.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
